# oauth3

./: .dockerignore  .env.example  .gitignore  ATTESTATION_VERIFICATION.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENTS.md  DOCKER.md  Dockerfile  Dockerfile.nix  NIX_BUILD.md  README.md  dex-config.yaml  docker-compose.override.yml  docker-compose.phala-fix.yml  docker-compose.phala.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix  package-lock.json  package.json  phala-deploy.sh  pre-launch.sh  result
.github/workflows/: docker-build.yml
.junie/: guidelines.md
circuits/dcap-gnark/: .gitignore  go.mod
circuits/dcap-gnark/cmd/export-vkey/: main.go
circuits/dcap-gnark/cmd/prove/: main.go
circuits/dcap-gnark/cmd/setup/: main.go
circuits/dcap-gnark/testdata/fixtures/: zkdcap
contracts/: .gitignore
contracts/clearance/: Cargo.toml
contracts/clearance/.cargo/: config.toml
contracts/clearance/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/dstack-attestation/: Cargo.toml  README.md
contracts/dstack-attestation-test/: .env.example  Cargo.toml
contracts/dstack-attestation-test/src/: lib.rs
contracts/dstack-attestation-test/tests/: verify_on_chain.rs
contracts/dstack-attestation/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  rtmr.rs  state.rs
contracts/dstack-verifier/: Cargo.toml
contracts/dstack-verifier/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  state.rs
contracts/dstack-verifier/tests/: gas_measurement.rs
contracts/dstack-verifier/tests/fixtures/: collateral.json  quote.hex
contracts/zkdcap/host/: Cargo.toml  build.rs
contracts/zkdcap/host/src/: gnark.rs  lib.rs  main.rs  sp1.rs
contracts/zkdcap/sp1-guest/: Cargo.toml
contracts/zkdcap/sp1-guest-full/: Cargo.toml
contracts/zkdcap/test/: Cargo.toml
contracts/zkdcap/test/fixtures/: attestation.json  collateral.json  pre_verified.json  timestamp.txt
contracts/zkdcap/verifier/: Cargo.toml
docs/: attestation.md  nix-builds.md  oauth-apps.md
dstack-verifier/: Cargo.toml  README.md  TODO.md
dstack-verifier/src/: lib.rs
migrations/00000000000001_create_users/: down.sql  up.sql
migrations/00000000000002_create_oauth_providers/: down.sql  up.sql
migrations/00000000000003_create_user_identities/: down.sql  up.sql
migrations/0001_init/: down.sql  up.sql
migrations/2026-01-22-230802-0000_add_api_base_url_to_providers/: down.sql  up.sql
migrations/2026-01-23-002617-0000_add_api_keys/: up.sql
migrations/2026-02-01-0000_add_oauth_apps/: down.sql  up.sql
migrations/2026-03-01-0000_add_prove_jobs/: down.sql  up.sql
migrations/2026-03-02-0000_add_prover_type/: down.sql  up.sql
src/: app.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  security.rs
src/attestation/: mod.rs
src/auth/: mod.rs  oidc.rs  session.rs
src/db/: migrations.rs  mod.rs  pg.rs  sqlite.rs
src/models/: api_key.rs  app_redirect_uri.rs  app_token.rs  application.rs  consent.rs  identity.rs  mod.rs  oauth_code.rs  prove_job.rs  provider.rs  user.rs
src/repos/: mod.rs  pg.rs  sqlite.rs
src/web/: middleware.rs  mod.rs  prove_utils.rs  prove_worker.rs  proxy.rs  session.rs
src/web/handlers/: account.rs  apps.rs  attestation.rs  auth.rs  mod.rs  oauth.rs  pages.rs  prove.rs  verify.rs
static/: styles.css
test/: verify-gnark-proof.mjs
tests/: common.rs  health_test.rs  http_smoke.rs  oauth_login_test.rs  oidc_dex_docker.rs  oidc_dex_flow.rs  proxy_endpoint.rs  register_test.rs
views/: account.html  index.html  login.html
