[package]
name = "oauth3"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
pg = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]

[dependencies]
# Core web stack
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "decompression-br", "decompression-deflate", "decompression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config & serialization
config = "0.14"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"

# Auth (OIDC/OAuth2) — use reqwest with rustls (no OpenSSL in Docker)
openidconnect = { version = "3", default-features = false, features = ["reqwest", "rustls-tls"] }
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }

# IDs & utils
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
time = "0.3"

# Cookies (simple private cookies to start)
tower-cookies = { version = "0.11", features = ["private"] }

# Diesel core and async
diesel = { version = "2", default-features = false, features = ["chrono", "serde_json", "r2d2"] }
diesel-async = { version = "0.5", default-features = false, features = ["bb8", "postgres"] }

# Pooling for SQLite adapter path
r2d2 = "0.8"

# Migrations
diesel_migrations = { version = "2" }

# HTTP client (used by openidconnect/oauth2). Force rustls TLS.
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls"] }

# dstack attestation
hex = "0.4"
sha2 = "0.10"
urlencoding = "2"
bytes = "1"
http-body-util = "0.1"
url = "2"
# dstack-verifier: official v0.5.6 (OS image hash verification via dstack-mr)
dstack-verifier = { git = "https://github.com/Dstack-TEE/dstack", tag = "v0.5.6" }

[dev-dependencies]
# Test-only; avoid compiling in production images
serial_test = "3"
wiremock = "0.6"
jsonwebtoken = "9"
url = "2"
rsa = { version = "0.9" }
pkcs8 = { version = "0.10", features = ["pem"] }
