[package]
name = "dstack-attestation-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "3.0" }
cosmwasm-schema = "3.0"
cw-storage-plus = "3"
cw2 = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
dcap-qvl = { path = "../../../dcap-qvl", default-features = false, features = ["std", "cosmwasm"] }
getrandom = { version = "0.2", features = ["custom"] }
thiserror = "2"

[[bin]]
name = "generate-config"
path = "src/bin/generate_config.rs"
required-features = []

[dev-dependencies]
# cosmwasm-vm pins derive_more =1.0.0-beta.6 which conflicts with dcap-qvl's scale-info
# cosmwasm-vm = { version = "3.0.4", features = ["stargate"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
